--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,8 +8,9 @@ edition = "2018"
 [dependencies]
 tokio = { version = "1", features = ["full"] }
 futures = "0.3"
-regex = "1"
 anyhow = "1.0.32"
 clap = "2.33.2"
 structopt = "0.3.16"
 shell-words = "1.0.0"
+tokio-socketcan = "0.3.0"
+futures-util = "0.3.17"
